--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,6 @@
 ---
-# tasks file for ansible-role-devops
+- name: Install a list of packages
+  ansible.builtin.apt:
+    update_cache: yes
+    pkg:
+    - vim
