--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,14 +1,40 @@
 ---
-- name: Install a list of packages
-  ansible.builtin.yum:
-    update_cache: yes
-    pkg:
-    - vim
-    - ansible
-    - wget
-    - python3
-    - python3-pip
-    - python3-virtualenv
-    - tree
-    - podman
-    - git
+
+- name: Ensure unzip is installed.
+  package: name=unzip state=present
+
+- name: Ensure vim is installed.
+  package: name=vim state=present
+
+- name: Ensure ansible is installed.
+  package: name=ansible state=present
+
+- name: Ensure wget is installed.
+  package: name=wget state=present
+
+- name: Ensure python3 is installed.
+  package: name=python3 state=present
+
+- name: Ensure pip3 is installed.
+  package: name=python3-pip state=present
+
+- name: Ensure virtualenv is installed.
+  package: name=python3-virtualenv state=present
+
+- name: Ensure tree is installed.
+  package: name=tree state=present
+
+- name: Ensure podman is installed.
+  package: name=podman state=present
+
+- name: Ensure git is installed.
+  package: name=git state=present
+
+- name: Download and unarchive Packer.
+  unarchive:
+    src: https://releases.hashicorp.com/packer/{{ packer_version }}/packer_{{ packer_version }}_linux_{{ packer_arch }}.zip
+    dest: "{{ packer_bin_path }}"
+    remote_src: true
+    creates: "{{ packer_bin_path }}/packer"
+    mode: 0755
+
